fix form styling issue on mobile

--- a/src/components/EntryForm/EntryForm.css
+++ b/src/components/EntryForm/EntryForm.css
@@ -97,7 +97,7 @@
 
 @media (max-width: 599px) {
   .form-component {
-    height: 400px;
+    height: auto;
     max-width: 100%;  
     width: 100%;
   }
